# DISCORD_AMPLITUDE_STATS

./: .gitignore  TESTING.md  main.py  pyproject.toml
.github/workflows/: portfolio-confirm-poll.yml  portfolio-daily.yml  portfolio-monthly.yml  portfolio-weekly.yml  weekly.yml
discord-bot/: bot.py  functions.py  github_sync.py  llm_handler.py  main.py  pyproject.toml  render.yaml
discord-bot/business/: __init__.py
discord-bot/config/: __init__.py  settings.py
discord-bot/flow/: bot-architecture.puml  bot-workflow.puml  github-sync.puml  llm-routing.puml
discord-bot/infrastructure/: __init__.py
discord-bot/presentation/: __init__.py  message_router.py
discord-bot/shared/: __init__.py  types.py
discord_bot/: README.md  TEST_BOT.md  env.example  main.py  pyproject.toml
discord_bot/business/portfolio/: tools.py
discord_bot/flow/: bot-architecture.puml
discord_bot/presentation/: message_router.py
discord_bot/presentation/discord/: bot_adapter.py
discord_bot/presentation/formatters/: portfolio_formatter.py
discord_bot/shared/: utils.py
portfolio-report/: CRON_SETUP.md  PLANNING.md  README.md  main.py  public_api.py
portfolio-report/Flow/: current-architecture.puml  example.puml  portfolio-architecture.puml  signal-workflow.puml
portfolio-report/application/: __init__.py  portfolio_service.py
portfolio-report/business/: __init__.py
portfolio-report/config/: settings.py
portfolio-report/core/: confirm.py  metrics.py  portfolio.py  signals.py  test_portfolio.py  test_report.py  test_signals.py  trading_calendar.py
portfolio-report/data/: holdings.json
portfolio-report/domain/: __init__.py
portfolio-report/infrastructure/: __init__.py
portfolio-report/presentation/: __init__.py
portfolio-report/report/: builder.py
portfolio-report/shared/: __init__.py  constants.py  time.py  types.py  utils.py
portfolio-report/sources/: eastmoney.py  test_eastmoney.py
portfolio-report/utils/: config_loader.py  discord.py  discord_webhook.py
src/discord_bot/: __init__.py  main.py
src/portfolio_report/: README.md  __init__.py  main.py  (+1 more)
(+99 files in other folders)
