[project]
name = "portfolio-discord-bot"
version = "0.1.0"
description = "Discord bot for portfolio management with LLM interaction"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3.0",
    "openai>=1.0.0",
    "PyGithub>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "python-dateutil>=2.9.0",
    "numpy-financial>=1.0.0",
    "chinesecalendar>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

